# project-annguyen9461

./: .gitignore  README.md  citations.txt  requirements.txt
arduino/: height_control.ino
c++/control/: sync_read_write.cpp
claybot_ws/install/: local_setup.sh  setup.sh
claybot_ws/install/claybot/lib/claybot/: talker  vision
claybot_ws/install/claybot/share/claybot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
claybot_ws/install/claybot_srvcli/lib/claybot_srvcli/: client  server
claybot_ws/install/claybot_srvcli/share/claybot_srvcli/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
claybot_ws/install/claybot_srvcli/share/claybot_srvcli/cmake/: claybot_srvcliConfig.cmake
claybot_ws/log/: latest_build
claybot_ws/src/claybot/: CMakeLists.txt  package.xml
claybot_ws/src/claybot/launch/: rgb_stereo_node.launch.py
ros2_ws/src/claybot/: CMakeLists.txt
ros2_ws/src/claybot/cmake/: Doxyfile.in.template
ros2_ws/src/claybot/include/: control_turn.hpp
ros2_ws/src/claybot/install/: local_setup.sh  setup.bash  setup.sh
ros2_ws/src/claybot/install/claybot/share/claybot/: package.dsv  package.ps1  package.sh
ros2_ws/src/claybot/launch/: claybot.launch.xml  image.launch.xml  tracker_yolov4_spatial_node.launch.py
ros2_ws/src/claybot/log/: latest_build
ros2_ws/src/claybot/scripts/: arduino_comm.py  cut_shape_srv.py  img_proc.py  move_client.py  move_updown_cli.py  move_updown_srv.py  states.py
ros2_ws/src/claybot/src/: control_turn.cpp
ros2_ws/src/claybot_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/claybot_interfaces/msg/: Move.msg  RobotState.msg
ros2_ws/src/claybot_interfaces/srv/: CutShape.srv  SendMoveCommand.srv  SendTurnCommand.srv
src/claybot/: CMakeLists.txt  package.xml
src/claybot/launch/: image.launch.xml
src/claybot/rviz/: color_and_depth_img.rviz
src/claybot/scripts/: arduino_comm.py  tracklet_visualizer.py
src/claybot/src/: img_processing.cpp  tracklet_visualizer.py  yolo.py
src/claybot_srvcli/: CMakeLists.txt  package.xml
src/install/: local_setup.sh  setup.sh
src/install/claybot/share/claybot/: package.bash  package.zsh
src/log/: latest_build
